# rust-icp

./: Cargo.toml
data/: test_fixed.json  test_moving.json
src/: lib.rs  main.rs
src/registration/: icp.rs
src/utils/: matrix.rs
src/visualization/: mod.rs  visuals3d.rs
